--- a/css/estilosAcercaDeMi.css
+++ b/css/estilosAcercaDeMi.css
@@ -1,76 +1,24 @@
-.mat-card#first-card {
-    padding: 0;
-}
 
-#first-card {
-    float: relative;
-    margin-top: -25px;
-    z-index: 0;
-    
-}
-
-.profile-image {
-    border-radius: 50%;
-    width: 152px;
-    height: 152px;
-    margin-top: -110px;
-    z-index: 1;
-    float: left;
-}
-div#info-actions {
-    display: flex;
-}
-div#info-actions button {
-    margin-right: 8px;
-}
-div#info-contact span {
-    font-size: 1rem;
-    font-weight: 400;
-}
-div#info-contact span a {
-    color: #0a66c2;
-    touch-action: manipulation;
-    text-decoration: none;
-}
-div#info-company, div#info-titulo {
-    font-size: 1.2rem;
-    font-weight: 400;
-    line-height: 1.25;
-}
-div#info-data {
-    display: flex;
-    justify-content: space-between;
-}
-div#info-data h1 {
-    font-size: 1.8rem;
+.text-acercaDeMi {
+/*#contResumenAcercaDeMi {*/
+    padding-top: 1rem;
+    padding-bottom: 0;
+    margin-bottom: 0;
     display: inline;
-    font-weight: 500;
-    line-height: 1.25;
-    word-wrap: break-word;
-    word-break: break-word;
-}
-div#info-data ul#info-details {
-    width: 232px;
-    list-style: none;
-    flex-shrink: 0;
-}
-div#info-data ul#info-details li a {
-    color: black;
-    display: flex;
-    text-decoration: none;
-}
-div#info-data ul#info-details li a h2 {
-    font-size: 1rem;
-    font-weight: 500;
-    align-self: center;
-    vertical-align: baseline;
-}
-div#info-data ul#info-details li a img {
-    width: 32px;
-    height: 32px;
-    margin-right: 8px;
-}
-
-.btn-edit-foto {
     float: left;
 }
+#text-acercaDeMi-1 {
+    font-style: italic;
+    font-weight:bold;
+    display: inline;
+}
+/*
+.contParrafosAcercaDeMi .contIndividual-P {
+    display: flex;
+    flex-wrap: nowrap;
+}
+.contIndividual-P .btn-edit, .contIndividual-P .btn-delete {
+
+}
+*/
+
