--- a/css/misEstilos_01.css
+++ b/css/misEstilos_01.css
@@ -26,6 +26,24 @@ body{
 .ficha {
     padding: 16px;
 }
+.ficha .tituloFicha {
+    font-size: 1.8rem;
+    display: inline;
+    font-weight: 500;
+    line-height: 1.25;
+    word-wrap: break-word;
+    word-break: break-word;
+
+}
+.lapizALaDerecha {
+    display: inline;
+    float: right;
+}
+.lapizAlLado {
+    display: inline;
+    float: left;
+}
+
 /*
 ul.items-list {
     list-style: none inside;
@@ -44,6 +62,13 @@ ul.items-list li div.data-container a {
 */
 .btn-edit {
     /*float: left;*/
+    padding-top: 1rem;
+    padding-left: 1rem;
+}
+.btn-delete {
+    /*float: left;*/
+    padding-top: 1rem;
+    padding-left: 1rem;
 }
 
 .limpiarFloat {
