--- a/css/estilosAcercaDeMi.css
+++ b/css/estilosAcercaDeMi.css
@@ -1,7 +1,17 @@
 
+/* Título de la sección "Acerca de mi..."  */
+.tituloAcercaDM {
+}
+
+/* Resumen de la sección "Acerca de mi..."  */
+#contResumenAcercaDeMi {
+    margin-top: 1rem;
+    display: flex;
+    flex-wrap: nowrap;
+}
 .text-acercaDeMi {
 /*#contResumenAcercaDeMi {*/
-    padding-top: 1rem;
+/*    padding-top: 1rem;*/
     padding-bottom: 0;
     margin-bottom: 0;
     display: inline;
@@ -12,13 +22,13 @@
     font-weight:bold;
     display: inline;
 }
-/*
-.contParrafosAcercaDeMi .contIndividual-P {
+.contParrafosAcercaDeMi {
+    margin-top: 1rem;
+}
+.contIndividual-P {
+    /*margin-top: 1rem;*/
     display: flex;
     flex-wrap: nowrap;
 }
-.contIndividual-P .btn-edit, .contIndividual-P .btn-delete {
 
-}
-*/
 
