--- a/css/misEstilos_01.css
+++ b/css/misEstilos_01.css
@@ -62,12 +62,12 @@ ul.items-list li div.data-container a {
 */
 .btn-edit {
     /*float: left;*/
-    padding-top: 1rem;
+    /*padding-top: 1rem;*/
     padding-left: 1rem;
 }
 .btn-delete {
     /*float: left;*/
-    padding-top: 1rem;
+    /*padding-top: 1rem;*/
     padding-left: 1rem;
 }
 
