--- a/css/misEstilos_01.css
+++ b/css/misEstilos_01.css
@@ -64,13 +64,14 @@ ul.items-list li div.data-container a {
     /*float: left;*/
     /*padding-top: 1rem;*/
     padding-left: 1rem;
+    
 }
 .btn-delete {
     /*float: left;*/
     /*padding-top: 1rem;*/
     padding-left: 1rem;
     display: block;
-    
+    /*display: none;*/
 }
 
 .limpiarFloat {
