--- a/css/estilosSkills.css
+++ b/css/estilosSkills.css
@@ -6,16 +6,24 @@
 }
 .contIndividual-skill {
     margin-top: 1rem;
-    margin-left: 2rem;
+    /*margin-left: 2rem;*/
+    padding-left: 2rem;
     display: flex_;
     flex-wrap: nowrap_;
-    /*align-items: stretch;
-    justify-content: flex-start;
+    align-items: center;
+    /*justify-content: flex-start;
     float: left;*/
 }
 .contInd-skill-izq {
     display: inline;
-    float: left_;
+    float: left;
+}
+.contInd-skill-izq h3 {
+    margin-bottom: 0;
+    padding-left: 1rem;
+}
+.progress-value {
+    margin-top: -0.5rem;
 }
 .contInfo-skill {
 
@@ -68,7 +76,9 @@ https://bestjquery.com/tutorial/progress-bar/demo78/
 .progress-bar {
     background-color: red;
 }
-
+.separadorSkill {
+    visibility: visible;
+}
 
 @keyframes animate-positive{
     0%{ width: 0; }
